crates/uitest/fixtures/mir_check/match_pattern_mut_borrow_copy_alias.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/match_pattern_mut_borrow_copy_alias.fe
---
error[10-0002]: borrow conflict in `fn match_pattern_mut_borrow_copy_alias`
   ┌─ match_pattern_mut_borrow_copy_alias.fe:10:5
   │
10 │     let y: u8 = foo.x
   │     ^^^^^^^^^^^^^^^^^ access overlaps an active `mut` borrow
